objects/Bank_statementdata__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Statement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Statement</label>
        <referenceTo>Bank_Statement__c</referenceTo>
        <relationshipName>statementdatas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>closingBalance__c</fullName>
        <label>closingBalance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>daysInNegative__c</fullName>
        <label>daysInNegative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endDate__c</fullName>
        <label>endDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>errorMessage__c</fullName>
        <label>errorMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maxBalance__c</fullName>
        <label>maxBalance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>minBalance__c</fullName>
        <label>minBalance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>minDayEndBalance__c</fullName>
        <label>minDayEndBalance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>openingBalance__c</fullName>
        <label>openingBalance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>startDate__c</fullName>
        <label>startDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalCredits__c</fullName>
        <label>totalCredits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>totalDebits__c</fullName>
        <label>totalDebits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bank statementdata</label>
    <nameField>
        <label>statementdata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank statementdata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>